tests/checker/diagnostics/0339_fun_locally_abstract_mismatch_10.ml.infer.expected
File "0339_fun_locally_abstract_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0339_fun_locally_abstract_mismatch_10 is not a valid module name.

File "0339_fun_locally_abstract_mismatch_10.ml", line 1, characters 39-40:
1 | let bad_kappa (type a) (x : a) : int = x
                                           ^
Error: The value x has type a but an expression was expected of type int
