tests/checker/diagnostics/0339_fun_locally_abstract_mismatch_10.ml
let bad_kappa (type a) (x : a) : int = x
